--- a/css/main.css
+++ b/css/main.css
@@ -24,6 +24,8 @@ html {
 body {
     color: #222;
     font-size: 10px;
+    max-width: 1200px;
+    margin: auto;
     line-height: 1.4;
     font-family: Roboto;
 }
@@ -35,123 +37,277 @@ body {
     box-shadow: 0 1px 3px 0 rgba(119, 119, 119, 0.3);
 }
 
-header h1 {
-    font-size: 5em;
-    margin: 0;
-    padding-top: 23px;
-    text-align: center;
+@media (max-width: 700px){
+    header h1 {
+        font-size: 5em;
+        margin: 0;
+        margin-top: 23px;
+        text-align: center;
+    }
+
+    header div {
+        text-align: center;
+        font-size: 4em;
+        padding-top: 20px;
+        color: #59595b;
+        padding-bottom: 20px;
+    }
+
+    .navigation-bar ul {
+        padding-left: 0;
+    }
+
+    .navigation-bar ul li{
+        color: #59595b;
+        text-decoration: none;
+        list-style-type: none;
+        size: 20px;
+        font-size: 2.5em;
+        padding: 12px;
+        border-bottom: solid 1px #59595b;
+        text-align: left;
+    }
+
+    .body-container {
+        height: 10000px;
+        background-color: white;
+    }
+
+    a {
+        padding-left: 8px;
+        color: #59595b;
+        text-decoration: none;
+    }
+
+    .home-description h2 {
+        color: #59595b;
+        text-align: center;
+        margin-top: 20px;
+        padding-top: 12px;
+        margin-bottom: 20px;
+        font-size: 3em;
+    }
+
+    .home-description p{
+        color: #59595b;
+        font-size: 2.2em;
+        margin-bottom: 20px;
+        margin-left: 12px;
+        margin-right: 12px;
+    }
+
+    .comments {
+        overflow: hidden;
+        padding: 20px 20px 0 20px;
+    }
+
+    .comments h2 {
+        font-size: 3em;
+        text-align: center;
+        color: #59595b;
+        padding-bottom: 20px;
+        border-bottom: solid #ccc 1px;
+    }
+
+    .single-comment {
+        margin-bottom: 50px;
+    }
+
+
+    .single-comment img{
+        width: 75px;
+        float: left;
+        margin: 0 20px 20px 8px;
+        height: 75px;
+        border-radius: 50%;
+        display: inline-block;
+    }
+
+    .username {
+        font-size: 1.5em;
+    }
+
+    .date-comment{
+        font-size: 1.2em;
+    }
+
+    .description-comment{
+        font-size: 1.5em;
+    }
+
+    footer {
+        background-color: #222222;
+    }
+
+    .footer-bar ul {
+        padding: 0;
+    }
+
+    .footer-bar ul li{
+        color: white;
+        text-decoration: none;
+        list-style-type: none;
+        size: 20px;
+        font-size: 2.5em;
+        padding: 12px;
+        border-bottom: solid 1px white;
+        text-align: left;
+    }
+
+    .footer-bar ul li a{
+        color: white;
+    }
 }
 
-header div {
-    text-align: center;
-    font-size: 4em;
-    padding-top: 20px;
-    color: #59595b;
-    padding-bottom: 20px;
-}
+@media (min-width: 700px) {
 
-.navigation-bar ul {
-    padding-left: 0;
-}
+    header {
+        overflow: hidden;
+        margin-top: 60px;
+    }
 
-.navigation-bar ul li{
-    color: #59595b;
-    text-decoration: none;
-    list-style-type: none;
-    size: 20px;
-    font-size: 2.5em;
-    padding: 12px;
-    border-bottom: solid 1px #59595b;
-    text-align: left;
-}
+    header h1 {
+        font-size: 5em;
+        margin: 0;
+        vertical-align: middle;
+        display: inline-block;
+        padding-top: 23px;
+        text-align: left;
+    }
 
-.body-container {
-    height: 10000px;
-    background-color: white;
-}
+    header div {
+        display: none;
+    }
 
-a {
-    padding-left: 8px;
-    color: #59595b;
-    text-decoration: none;
-}
+    .navigation-bar {
+        display: inline-block;
+        margin-top: 30px;
+        float: right;
+        vertical-align: middle;
+    }
 
-.home-description h2 {
-    color: #59595b;
-    text-align: center;
-    margin-top: 20px;
-    padding-top: 12px;
-    margin-bottom: 20px;
-    font-size: 3em;
-}
+    .navigation-bar ul {
+        padding-left: 0;
+    }
 
-.home-description p{
-    color: #59595b;
-    font-size: 2.2em;
-    margin-bottom: 20px;
-    margin-left: 12px;
-    margin-right: 12px;
-}
+    .navigation-bar ul :last-child{
+        border: none;
+    }
 
-.comments {
-    overflow: hidden;
-    padding: 20px 20px 0 20px;
-}
+    .navigation-bar ul :first-child{
+        padding-left: 0;
+    }
 
-.comments h2 {
-    font-size: 3em;
-    text-align: center;
-    color: #59595b;
-    padding-bottom: 20px;
-    border-bottom: solid #ccc 1px;
-}
+    .navigation-bar ul li {
+        color: #59595b;
+        display: inline-block;
+        text-decoration: none;
+        list-style-type: none;
+        border-right: solid 1px #59595b;
+        font-size: 2.5em;
+        padding-left: 12px;
+        text-align: left;
+    }
 
-.single-comment {
-    margin-bottom: 50px;
-}
+    .navigation-bar ul li :hover{
+        color: steelblue;
+        transition: 2s;
+        font-size: 1.1em;
+    }
 
 
-.single-comment img{
-    width: 75px;
-    float: left;
-    margin: 0 20px 20px 8px;
-    height: 75px;
-    border-radius: 50%;
-    display: inline-block;
+    .general-container{
+        margin-top: 60px;
+    }
+
+    .body-container {
+        background-color: white;
+    }
+
+    a {
+        color: #59595b;
+        padding-right: 16px;
+        text-decoration: none;
+    }
+
+    .home-description h2 {
+        color: #59595b;
+        text-align: center;
+        margin-top: 20px;
+        padding-top: 12px;
+        margin-bottom: 20px;
+        font-size: 3em;
+    }
+
+    .home-description p {
+        color: #59595b;
+        font-size: 2.2em;
+        margin-bottom: 20px;
+        margin-left: 12px;
+        margin-right: 12px;
+    }
+
+    .comments {
+        overflow: hidden;
+        padding: 20px 20px 0 20px;
+    }
+
+    .comments h2 {
+        font-size: 3em;
+        text-align: center;
+        color: #59595b;
+        padding-bottom: 20px;
+        border-bottom: solid #ccc 1px;
+    }
+
+    .single-comment {
+        margin-bottom: 50px;
+    }
+
+    .single-comment img {
+        width: 75px;
+        float: left;
+        margin: 0 20px 20px 8px;
+        height: 75px;
+        border-radius: 50%;
+        display: inline-block;
+    }
+
+    .username {
+        font-size: 1.5em;
+    }
+
+    .date-comment {
+        font-size: 1.2em;
+    }
+
+    .description-comment {
+        font-size: 1.5em;
+    }
+
+    footer {
+        background-color: #222222;
+    }
+
+    .footer-bar ul {
+        padding: 0;
+    }
+
+    .footer-bar ul li {
+        color: white;
+        text-decoration: none;
+        list-style-type: none;
+        size: 20px;
+        font-size: 2.5em;
+        padding: 12px;
+        border-bottom: solid 1px white;
+        text-align: left;
+    }
+
+    .footer-bar ul li a {
+        color: white;
+    }
 }
 
-.username {
-    font-size: 1.5em;
-}
 
-.date-comment{
-    font-size: 1.2em;
-}
-
-.description-comment{
-    font-size: 1.5em;
-}
-
-footer {
-    background-color: #222222;
-}
-
-.footer-bar ul {
-    padding: 0;
-}
-
-.footer-bar ul li{
-    color: white;
-    text-decoration: none;
-    list-style-type: none;
-    size: 20px;
-    font-size: 2.5em;
-    padding: 12px;
-    border-bottom: solid 1px white;
-    text-align: left;
-}
-
-.footer-bar ul li a{
-    color: white;
-}
 
