--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,7 @@
 }
 
 html {
-    background-color: #edecee;
+    background-color: #f5f4f6;
     background-image: url("../img/ep_naturalblack.png");
     background-repeat: repeat;
 }
@@ -31,18 +31,27 @@ body {
     font-family: Roboto;
 }
 
-.general-container {
-    margin: 5px;
-    background-color: white;
-    margin-top: 12px;
-    box-shadow: 0 1px 3px 0 rgba(119, 119, 119, 0.3);
+.main_container {
+    -webkit-box-shadow: 0px 0px 49px 1px rgba(153,153,153,1);
+    -moz-box-shadow: 0px 0px 49px 1px rgba(153,153,153,1);
+    box-shadow: 0px 0px 49px 1px rgba(153,153,153,1);
 }
 
-@media (max-width: 700px){
+.general-container {
+    background-color: white;
+}
+
+@media (max-width: 900px){
+
+    .main_container {
+        -webkit-box-shadow: none;
+        -moz-box-shadow: none;
+        box-shadow: none; }
+
     header h1 {
         font-size: 5em;
         margin: 0;
-        color: white;
+        color: black;
         margin-top: 60px;
         text-align: center;
     }
@@ -76,7 +85,7 @@ body {
 
     a {
         padding-left: 8px;
-        color: white;
+        color: #59595b;
         text-decoration: none;
     }
 
@@ -160,20 +169,23 @@ body {
     }
 }
 
-@media (min-width: 700px) {
+@media (min-width: 900px) {
 
     header {
-        overflow: hidden;
-        margin-top: 60px;
+        width: 100%;
+        height: 106px;
+        border-bottom: solid 2px #cccccc;
+        background-color: white;
     }
 
     header h1 {
         font-size: 5em;
         margin: 0;
-        color: white;
-        display: block;
+        margin-left: 20px;
+        color: black;
+        display: inline-block;
         padding-top: 23px;
-        text-align: center;
+        text-align: left;
     }
 
     header div {
@@ -181,14 +193,17 @@ body {
     }
 
     .navigation-bar {
-        display: block;
-        margin-top: 30px;
+        display: inline-block;
         text-align: center;
+        margin-top: 23px;
+        float: right;
         vertical-align: middle;
     }
 
     .navigation-bar ul {
         padding-left: 0;
+        margin-right: 20px;
+        margin-right: 50px;
     }
 
     .navigation-bar ul :last-child{
@@ -201,10 +216,7 @@ body {
         display: inline-block;
         text-decoration: none;
         list-style-type: none;
-        border-right: solid 1px #59595b;
         font-size: 2.5em;
-        padding-right: 3%;
-        padding-left: 3%;
     }
 
     .navigation-bar ul li :hover{
@@ -212,24 +224,20 @@ body {
     }
 
 
-    .general-container{
-        margin-top: 60px;
-    }
-
     .body-container {
         background-color: white;
     }
 
     a {
-        color: white;
+        color: #59595b;
         padding-right: 16px;
         text-decoration: none;
     }
 
     .home-description h2 {
         color: #59595b;
+        margin-top: 0;
         text-align: center;
-        margin-top: 20px;
         padding-top: 12px;
         margin-bottom: 20px;
         font-size: 4em;
