--- a/css/main2.css
+++ b/css/main2.css
@@ -1,4 +1,9 @@
-/* Remove the navbar's default margin-bottom and rounded borders */ 
+/* Remove the navbar's default margin-bottom and rounded borders */
+
+* {
+    box-sizing: border-box;
+}
+
 .navbar {
 	margin-bottom: 0;
 	background-color: #d9d9d9;
@@ -37,20 +42,20 @@
 	height: 100%;
 }
 
-#zonaDerechaInfo {
+.zonaDerechaInfo {
 	padding-left: 30px;
 }
 
 .contentLanding #divRecibirInfo{margin:0 0 10px 0;border:solid 1px rgba(0, 0, 0, 0.08);}
 .contentLanding .fotosLanding h3{margin-bottom:12px;}
 .contentLanding #divRecibirInfo textarea{height:83px !important;}
-#divRecibirInfo{background:#d9d9d9;padding:11px 15px 15px;margin-bottom:20px;font-weight:bold;line-height:20px;font-size:11px;}
-#divRecibirInfo input[type=text], #divRecibirInfo textarea{border:solid 1px #b3b3b3;background:#FFF;padding:12px 6px;font-size:12px;width:100%;box-sizing:border-box;margin-bottom:8px;}
-#divRecibirInfo textarea{height:100px;padding:5px 6px;margin-bottom:4px;}
-#divRecibirInfo2{border-radius:5px;background:#eee;padding:11px 15px 15px;font-weight:bold;line-height:20px;margin-top:20px;}
-#divRecibirInfo2 h2{margin:0px 0 15px !important;font-size:16px!important;color:#333!important; font-family:"Source Sans Pro",Arial, Helvetica, sans-serif !important;}
-#divRecibirInfo2 input[type=text], #divRecibirInfo2 textarea{outline:none;font-family:"Open Sans", Arial, sans-serif;border:none;background:#FFF;padding:15px 8px;border-radius:5px;font-size:12px;width:100%;box-sizing:border-box;margin-bottom:8px;}
-#divRecibirInfo2 textarea{height:100px;padding:5px 6px;margin-bottom:4px;}
+.divRecibirInfo{background:#d9d9d9;padding:11px 15px 15px;margin-bottom:20px;font-weight:bold;line-height:20px;font-size:11px;}
+.divRecibirInfo input[type=text], #divRecibirInfo textarea{border:solid 1px #b3b3b3;background:#FFF;padding:12px 6px;font-size:12px;width:100%;box-sizing:border-box;margin-bottom:8px;}
+.divRecibirInfo textarea{height:100px;padding:5px 6px;margin-bottom:4px; width:100%;}
+.divRecibirInfo2{border-radius:5px;background:#eee;padding:11px 15px 15px;font-weight:bold;line-height:20px;margin-top:20px;}
+.divRecibirInfo2 h2{margin:0px 0 15px !important;font-size:16px!important;color:#333!important; font-family:"Source Sans Pro",Arial, Helvetica, sans-serif !important;}
+.divRecibirInfo2 input[type=text], #divRecibirInfo2 textarea{outline:none;font-family:"Open Sans", Arial, sans-serif;border:none;background:#FFF;padding:15px 8px;border-radius:5px;font-size:12px;width:100%;box-sizing:border-box;margin-bottom:8px;}
+.divRecibirInfo2 textarea{height:100px;padding:5px 6px;margin-bottom:4px; width:100%;}
 
 
 footer {
@@ -62,16 +67,17 @@ footer {
 
 body {
 	color: #222;
-	text-align: justify;
+    max-width: 1200px;
 	text-justify: inter-word;
 	margin: auto;
 	line-height: 1.4;
+    background-color: #f2f2f2;
 	font-family: Roboto;
 }
 
 p {
 	font-size: 18px;
-	text-align: justify;
+	text-align: left;
 	text-justify: inter-word;
 }
 
@@ -85,10 +91,6 @@ br {
 
 h3 {
 	font-size: 15px;
-}
-
-body {
-	background-color: #f2f2f2;
 }
 
 .navbar {
