--- a/css/test.css
+++ b/css/test.css
@@ -2,3 +2,17 @@
 br {
 	margin-bottom: 20px;
 }
+
+.parallax {
+    /* The image used */
+    background-image: url("https://freeios7.com/download/freeios7.com_apple_wallpaper_milky-way-galaxy_ipad_retina.jpg");
+
+    /* Set a specific height */
+    height: 400px;
+
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
