--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,3 @@
-/*
- * Start Bootstrap - Full Width Pics (http://startbootstrap.com/)
- * Copyright 2013-2016 Start Bootstrap
- * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
- */
-
-body {
-    margin-top: 50px; /* Required margin for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
-}
-
 .image-bg-fluid-height,
 .image-bg-fixed-height {
     text-align: center;
@@ -18,7 +8,7 @@ body {
 }
 
 .image-bg-fluid-height {
-	background: url('https://freeios7.com/download/freeios7.com_apple_wallpaper_milky-way-galaxy_ipad_retina.jpg') no-repeat center center scroll;
+	background: url(../img/background_1.png) no-repeat center center scroll;
     padding: 60px 0;
     background-attachment: fixed;
     background-position: center;
@@ -60,6 +50,20 @@ footer {
     margin: 50px 0;
 }
 
+br {
+    line-height: 150%;
+}
+
+.texto-justificado {
+text-align: justify;
+text-justify: inter-word;
+line-height: 180%;
+}
+
+.logo {
+max-height: 200px;
+}
+
 @media(max-width:768px) {
     section {
         padding-top: 25px;
@@ -69,4 +73,13 @@ footer {
     .section-heading {
         font-size: 2em;
     }
+}
+
+.drop-shadow {
+    -webkit-box-shadow: 0 0 5px 2px rgba(0, 0, 0, .5);
+    box-shadow: 0 0 5px 2px rgba(0, 0, 0, .5);
+}
+.container.drop-shadow {
+    padding-left:0;
+    padding-right:0;
 }
